configuracion de desarrollo datasource usuarios con posgresql

--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -1,7 +1,7 @@
 #POSTGRESQL CONFIGURACION
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud?serverTimezone=America/Bogota
 spring.datasource.username=postgres
-spring.datasource.password=jenny23
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
@@ -11,3 +11,4 @@ loggin.level.org.hibernate.SQL=debug
 
 #Configuracion evitar error postgresql y springboot
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
