--- a/product-service-prod.properties
+++ b/product-service-prod.properties
@@ -1,7 +1,7 @@
 #MYSQl
 spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?serverTimezone=America/Bogota
-spring.datasource.username=root
-spring.datasource.password=jenny23
+spring.datasource.username=postgres
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
