--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -1,7 +1,7 @@
 #POSTGRESQL CONFIGURACION
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud?serverTimezone=America/Bogota
-spring.datasource.username=root
-spring.datasource.password=jenny23
+spring.datasource.username=postgres
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
