configuracion de desarrollo datasource usuarios con posgresql

--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -3,12 +3,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud?serve
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
-##Solo -> para desarrollo esta configuracion, generacion de tablas en baase a anotaciones jpa
-spring.jpa.hibernate.ddl-auto=none                             
-loggin.level.org.hibernate.SQL=debug
 
-#Configuracion evitar error postgresql y springboot
+# Hibernate additional native properties to set on the JPA provider.
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.current_session_context_class=thread
+spring.jpa.properties.hibernate.format_sql=true
+
+# Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
