configuracion de desarrollo datasource usuarios con posgresql

--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -1,7 +1,9 @@
 #POSTGRESQL CONFIGURACION
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=root
+
+spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
@@ -13,4 +15,3 @@ spring.jpa.properties.hibernate.format_sql=true
 # Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-Mariamariotta123
