--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -4,7 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 
 spring.datasource.platform=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 
 
 # Hibernate additional native properties to set on the JPA provider.
