configuracion de desarrollo datasource usuarios con posgresql

--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -14,4 +14,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+loggin.level.org.hibernate.SQL=debug
 
