--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -1,7 +1,7 @@
 #POSTGRESQL CONFIGURACION
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=jenny23
 
 spring.datasource.platform=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
