configuracion de desarrollo datasource usuarios con posgresql

--- a/usuario-service-dev.properties
+++ b/usuario-service-dev.properties
@@ -1,6 +1,6 @@
 #POSTGRESQL CONFIGURACION
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
-spring.datasource.username=postgres
+spring.datasource.username=kabama
 spring.datasource.password=jenny23
 
 spring.datasource.platform=postgres
